interconnect: Add debugfs test code
Allow setting constraints from userspace for more convenient testing.

Example usage:
cd /sys/kernel/debug/interconnect-test/
echo -n 3 > src_port
echo -n 53 > dst_port
echo -n 1 > get
echo -n 80000000 > avg_bw
echo -n 1 > commit

Signed-off-by: Georgi Djakov <georgi.djakov@linaro.org>

--- a/drivers/interconnect/Makefile
+++ b/drivers/interconnect/Makefile
@@ -3,4 +3,5 @@
 icc-core-objs				:= core.o
 
 obj-$(CONFIG_INTERCONNECT)		+= icc-core.o
+obj-$(CONFIG_INTERCONNECT)		+= debugfs-test.o
 obj-$(CONFIG_INTERCONNECT_QCOM)		+= qcom/
